--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,16 @@ name = "nodes"
 version = "0.1.0"
 authors = ["nyorain"]
 
+[lib]
+name = "nodes"
+path = "src/lib.rs"
+
+[[bin]]
+name = "nodes"
+path = "src/main.rs"
+
 [dependencies]
 toml = "0.4"
 clap = "2.29"
 time = "0.1"
+regex = "0.2"
